# numtest

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  pull_request.yml  scheduled.yml  weekly.yml
src/: assert_array.rs  assert_float.rs  compare.rs  lib.rs  precision.rs
